css/base/responsiveness.css
@media screen and (max-width: 800px) and (min-width: 600px) {
  main div {
    width: 60%;
  }

  .logo {
    font-size: 5rem;
    left: 30px;
  }
}

@media (max-width: 599px) {
  h1 {
    font-family: "Caveat", cursive;
    font-size: 2.3rem;
    margin-bottom: 2.3rem;
  }

  input {
    width: 70%;
  }

  main div {
    width: 100%;
  }

  .logo {
    font-size: 4rem;
    top: 55px;
    left: 10px;
  }
}

